# xgc-summarizer

./: .gitignore  CMakeLists.bk2.txt  CMakeLists.txt  CMakeLists1.txt  Makefile  ParallelUtils.cmake  README.md  adios2cfg.bp.xml  adios2cfg.ismpi.xml  clean.sh  cm.sh  format-code.sh  getDependencies.sh  install.sh  job-titan-bp.pbs  job-titan-ismpi.pbs  job-titan-sst.pbs  run-is.pbs  run-is.sh  run-reduced.sh  run.pbs  run.sh  run2.sh  run3.sh  search.cu  summarizer
adios2-configurations/: adios2cfg.sst.xml
module-scripts/: module-to-load-titan.sh
run-scripts/local/: run-is.sh  run.sh
run-scripts/titan/: job-titan-bp.pbs  job-titan-ismpi.pbs  job-titan-sst.pbs  run-is.pbs  run.pbs
source/: FieldInterpolator.hpp  Main.cpp  Minimal.cpp  PartitionMesh.cpp  ReduceMesh.cpp  RunInPost.cpp  SimpleAdios2XMLParser.hpp  Summarizer.cpp  SummarizerMPI.cpp  SummarizerMPIAdios1.cpp  SummarizerMPIAdios1VTKmInterpolation.cpp  Summary.hpp  SummaryUtils.hpp  SummaryWriter.hpp  SummaryWriterAdios2.hpp  VTKmAggregator.hpp  VTKmAggregatorTools.cu  VTKmAggregatorTools.hpp  VTKmInterpolator.hpp  XGCAggregator.cxx  XGCAggregator.hpp  XGCBFieldInterpolator.hpp  XGCConstantReader.hpp  XGCConstrantReader.hpp  XGCFlagger.cpp  XGCGridBuilder.hpp  XGCMeshLoader.hpp  XGCMeshReader.hpp  XGCMeshReaderAdios1.hpp  XGCMeshReaderAdios2.hpp  XGCParticleReader.hpp  XGCParticleReaderAdios1.hpp  XGCParticleReaderAdios2.hpp  XGCPsinInterpolator.hpp  XGCSynchronizer.hpp  XGCTracker.hpp  sunflower.cpp  test.cpp
source/Reduce/: Reduce.hpp
source/Types/: Triangle.hpp  Vec.hpp
source/grid-algorithms/: CMakeLists.txt  Decimate.cpp  MeshDecimator.hpp  MeshUtils.hpp  run.sh
source/kdtree/: KdTreeSearch2D.cpp  KdTreeSearch2D.hpp  ParticleMeshInterpolator2D.cpp  ParticleMeshInterpolator2D.cu  ParticleMeshInterpolator2D.hpp
